logo y esqueletos de footer,header,nav

--- a/views/index.html
+++ b/views/index.html
@@ -4,19 +4,92 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- para dispositivos -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- fuentes a usar -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap"
       rel="stylesheet"
     />
+    <!-- iconos -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      rel="stylesheet"
+    />
+    <!-- estilos -->
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/theme.css" />
 
     <title>estas en index</title>
   </head>
   <body>
-    <h1 class="titulo">Bienvenido a index</h1>
+    <h1 class="title">Bienvenido a index</h1>
+    <header>
+      <div class="brand-y-search">
+        <div class="logo-sp">
+          <img src="/images/logo-sin-fondo.svg" alt="logo sin fondo" />
+        </div>
+        <div>
+          <p>Barra de busqueda <i class="fas fa-search"></i></p>
+        </div>
+      </div>
+      <div class="social">
+        <div class="logo-ig"><i class="fab fa-instagram"></i></div>
+        <div class="logo-face">
+          <i class="fab fa-facebook-f"></i>
+        </div>
+        <div class="logo-twitter">
+          <i class="fab fa-twitter"></i>
+        </div>
+        <div class="logo-youtube">
+          <i class="fab fa-youtube"></i>
+        </div>
+        <div class="logo-gmail">
+          <i class="fas fa-envelope"></i>
+        </div>
+        <div class="logo-whatsapp">
+          <i class="fab fa-whatsapp"></i>
+        </div>
+      </div>
+    </header>
+    <nav>
+      <div class="navbar">
+        <div>
+          <p>Boton Categorias</p>
+        </div>
+        <div>
+          <p>Boton Prof. por Zona <i class="fas fa-hard-hat"></i></p>
+        </div>
+        <div>
+          <p>Boton "ingresar"</p>
+        </div>
+        <div>
+          <i class="fas fa-shopping-cart"></i>
+        </div>
+      </div>
+    </nav>
+    <footer class="footer">
+      <section>
+        <div class="titles-footer">
+          <ul class="list-footer" type="none">
+            <li><a href="">Terminos y Condiciones</a></li>
+            <li><a href="">Ayuda</a></li>
+            <li>
+              <a href="registerProf">Trabaja con Nosotros</a>
+            </li>
+            <li><a href="">Contacto</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="frase-footer">Servicios para Empresas y Pymes</h4>
+        </div>
+        <div>
+          <p>Copyright © 2021-2021</p>
+          <p>Calle Falsa 123, Springfield</p>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
