--- a/views/index.html
+++ b/views/index.html
@@ -78,7 +78,7 @@
   <main>
     <div>
       <p class="title-per-device">La solución que buscas, con el profesionalismo que necesitas</p>
-      <!-- modificar tamaño -->
+      <!-- modificar tamaño per device -->
     </div>
     <section class="services-carousel">
       <p>Lugar para imagenes de servicios en carousel</p>
@@ -94,32 +94,32 @@
       <article class="icon-article">
         <!-- mecanica auto -->
         <i class="fas fa-wrench"></i>
-        <p class="icon-txt">Categoria</p>
+        <p class="icon-txt">Mecanicos/as</p>
       </article>
       <article class="icon-article">
         <!-- electricista -->
         <i class="fas fa-plug"></i>
-        <p class="icon-txt">Categoria</p>
+        <p class="icon-txt">Electricistas</p>
       </article>
       <article class="icon-article">
         <!-- dentistas -->
         <i class="fas fa-tooth"></i>
-        <p class="icon-txt">Categoria</p>
+        <p class="icon-txt">Odontologos/as</p>
       </article>
       <article class="icon-article">
         <!-- plomeria -->
         <i class="fas fa-faucet"></i>
-        <p class="icon-txt">Categoria</p>
+        <p class="icon-txt">Plomeros/as</p>
       </article>
       <article class="icon-article">
         <!-- carpinteria -->
         <i class="fas fa-hammer"></i>
-        <p class="icon-txt">Categoria</p>
+        <p class="icon-txt">Carpinteros/as/p>
       </article>
       <article class="icon-article">
         <!-- pintores -->
         <i class="fas fa-paint-roller"></i>
-        <p class="icon-txt">Categoria</p>
+        <p class="icon-txt">Pintores/as</p>
       </article>
     </section>
     <section class="ad">
