--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -64,7 +64,6 @@ body {
   margin-top: 10px;
   padding: 3px;
   width: 90%;
-
   font-weight: 700;
 }
 
@@ -94,6 +93,7 @@ body {
 .title-categories {
   margin-top: 60px;
   margin-bottom: 10px;
+  text-align: center;
 }
 .icon-categories {
   display: flex;
