--- a/views/index.html
+++ b/views/index.html
@@ -114,7 +114,8 @@
       <article class="icon-article">
         <!-- carpinteria -->
         <i class="fas fa-hammer"></i>
-        <p class="icon-txt">Carpinteros/as/p>
+        <p class="icon-txt">Carpinteros/as/
+        <p>
       </article>
       <article class="icon-article">
         <!-- pintores -->
