--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;700&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/theme.css" />
   <link rel="stylesheet" href="/css/productDetail.css" />
-
+  <link rel="stylesheet" href="/css/tablet-productDetail.css" />
   <title>estas en index</title>
 </head>
 
@@ -75,93 +75,77 @@
     <div class="columns-productDetail-father">
       <div class="column12-productDetail">
         <div>
-          <p class="title-per-device-productDetail">Plomero</p>
+          <span class="title-per-device-productDetail">Plomero:</span>
+          <span class="name-per-device-productDetail">"Mario Don King Kong"</span>
+          <!--el nombre cambia segun el profesonial  -->
         </div>
-        <div class="prof-avatar">
-          <!-- Avatar cargada por el prof (.jpg, .png, .bmp) -->
+        <div class="top-flex-mobile">
+          <div class="prof-avatar">
+            <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
+          </div>
+
+          <div class="rating-father">
+            <div class="rating-star">
+              <div class="empty-star">
+                <span>Resultado</span>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <div class="full-star">
+                <span>Precio</span>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <div class="half-star">
+                <span>Rapidez</span>
+                <i class="fas fa-star-half-alt"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+            </div>
+            <p class="average-phrase">Promedio entre: n Opiniones</p>
+          </div>
         </div>
         <div class="buttons-below-avatar">
-          <button type="submit">
+          <div>
+            <p>Disponibilidad:</p>
+            <input type="date" id="date">
+          </div>
+          <button type="submit" style="width: 25vw;">
             Agregar Servicio
           </button>
-          <p>Ver Disponibilidad:</p>
-          <input type="date">
-          </button>
         </div>
-        <div class="rating-father">
-          <div>
-            <p>
-              Resultado
-            </p>
-            <p>
-              Precio
-            </p>
-            <p>
-              Rapidez
-            </p>
-          </div>
-          <div class="rating-star">
-            <div class="empty-star">
-              <i class="far fa-star"></i>
-            </div>
-            <div class="full-star">
-              <i class="fas fa-star"></i>
-            </div>
-            <div class="full-star">
-              <i class="fas fa-star-half-alt"></i>
-            </div>
-          </div>
-        </div>
-        <p class="average-phrase">Promedio entre: n Opiniones</p>
       </div>
       <div class="column22-productDetail">
-        <p>Nombre</p>
+        <p class="title-prof-name">Detalles</p>
+        <p>Zona:</p>
         <div class="details">
           <div>
-            <div>
-              <p>Edad</p>
-              <p>Matricula</p>
-              <p>Trabaja en Equipo</p>
-            </div>
-            <div>
-              <p>Años de Experiencia</p>
-              <p>Zona</p>
-              <p>Lleva Herramientas</p>
-            </div>
+            <p>Edad:</p>
+            <p>Matricula:</p>
+            <p>Trabaja en Equipo:</p>
+          </div>
+          <div>
+            <p>Años de Experiencia:</p>
+            <p>Lleva Herramientas:</p>
           </div>
         </div>
         <div>
-          <p>Razones por cuales elegirme</p>
-          <p class="prof-txt">txt dadas por el prof</p>
+          <p>Razones por cuales elegirme:</p>
+          <p class="prof-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, sit culpa officiis mollitia
+            odit eum tempore dolor. Cum necessitatibus quibusdam praesentium deleniti maxime similique illo qui, et
+            explicabo unde vel.</p>
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- categorias -->
     <h3 class="title-categories">Tambien te Puede Interesar</h3>
     <section class="icon-categories-product">
