--- a/views/index.html
+++ b/views/index.html
@@ -23,11 +23,10 @@
 <body>
   <header class="header-ppal">
     <div class="header-top">
-      <div class="logo-sp">
-        <img src="/images/logo-soluciones-profesionales.png" alt="logo sin fondo" />
-      </div>
-      <div>
-        <p>Barra de busqueda <i class="fas fa-search"></i></p>
+      <img src="/images/logo-soluciones-profesionales.png" alt="logo sin fondo" />
+      <div class="search-bar">
+        <input type="text" name="search-item">
+        <button class="search-button"><i class="fas fa-search"></i></button>
       </div>
     </div>
     <div class="header-bottom">
@@ -56,7 +55,7 @@
   <nav class="nav-login">
     <section class="categories">
       <div>
-        <p>Categorias <i class="fas fa-chevron-down"></i></p>
+        <p>CATEGORIAS <i class="fas fa-chevron-down"></i></p>
       </div>
       <div class="prof-zona">
         <p>Prof. por Zona <i class="fas fa-hard-hat"></i></p>
