--- a/views/productCart.html
+++ b/views/productCart.html
@@ -15,6 +15,37 @@
 </head>
 
 <body>
+  <header class="header-ppal">
+    <div class="header-top">
+      <img src="/images/logo-soluciones-profesionales.png" alt="logo sin fondo" />
+      <div class="search-bar">
+        <input type="text" name="search-item">
+        <button class="search-button"><i class="fas fa-search"></i></button>
+      </div>
+    </div>
+    <div class="header-bottom">
+      <div class="social">
+        <div class="logo-ig"><i class="fab fa-instagram"></i></div>
+        <div class="logo-face">
+          <i class="fab fa-facebook-f"></i>
+        </div>
+        <div class="logo-twitter">
+          <i class="fab fa-twitter"></i>
+        </div>
+        <div class="logo-youtube">
+          <i class="fab fa-youtube"></i>
+        </div>
+      </div>
+      <div class="icon-contact">
+        <div class="logo-gmail">
+          <i class="fas fa-envelope"></i>
+        </div>
+        <div class="logo-whatsapp">
+          <i class="fab fa-whatsapp"></i>
+        </div>
+      </div>
+    </div>
+  </header>
   <h1>Bienvenido a cart</h1>
 </body>
 
