--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -19,11 +19,10 @@
 <body>
   <header class="header-ppal">
     <div class="header-top">
-      <div class="logo-sp">
-        <img src="/images/logo-soluciones-profesionales.png" alt="logo sin fondo" />
-      </div>
-      <div>
-        <p>Barra de busqueda <i class="fas fa-search"></i></p>
+      <img src="/images/logo-soluciones-profesionales.png" alt="logo sin fondo" />
+      <div class="search-bar">
+        <input type="text" name="search-item">
+        <button class="search-button"><i class="fas fa-search"></i></button>
       </div>
     </div>
     <div class="header-bottom">
@@ -74,9 +73,9 @@
   <main>
     <div class="columns-productDetail-father">
       <div class="column12-productDetail">
-        <div>
-          <span class="title-per-device-productDetail">Plomero:</span>
-          <span class="name-per-device-productDetail">"Mario Don King Kong"</span>
+        <div class="prof-title-father">
+          <p class="title-per-device-productDetail">Odontologo:</p>
+          <p class="name-per-device-productDetail">"Mario Don King Kong"</p>
           <!--el nombre cambia segun el profesonial  -->
         </div>
         <div class="top-flex-mobile">
@@ -138,7 +137,7 @@
             <p>Lleva Herramientas:</p>
           </div>
         </div>
-        <div>
+        <div class="prof-detail-text">
           <p>Razones por cuales elegirme:</p>
           <p class="prof-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, sit culpa officiis mollitia
             odit eum tempore dolor. Cum necessitatibus quibusdam praesentium deleniti maxime similique illo qui, et
