--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -1,9 +1,13 @@
+.prof-title-father {
+  display: flex;
+}
+
 .title-per-device-productDetail {
   color: black;
   font-size: 1.7em;
   margin: 10px;
   padding: 3px;
-  width: 90%;
+  /* width: 90%; */
   font-weight: 700;
   text-decoration: underline;
 }
@@ -11,11 +15,12 @@
   color: red;
   font-size: 1.5em;
   padding: 3px;
-  width: 90%;
+  /* width: 90%; */
   font-weight: 700;
+  margin: 10px;
 }
 .prof-avatar {
-  border: red 2px dotted;
+  border: 10px black double;
   width: 30vw;
   height: 30vw;
   margin: 10px;
@@ -32,6 +37,7 @@
 .top-flex-mobile {
   display: flex;
   justify-content: space-around;
+  font-weight: bold;
 }
 
 .rating-father {
@@ -43,6 +49,11 @@
   justify-content: space-between;
   margin: 10px;
   width: 80vw;
+  font-weight: bold;
+}
+.buttons-below-avatar button {
+  background-color: grey;
+  color: white;
 }
 .icon-categories-product {
   display: flex;
@@ -55,19 +66,28 @@
   text-align: center;
   font-weight: 700;
   text-decoration: underline;
+  margin-top: 35px;
 }
 .details {
   display: flex;
   justify-content: space-around;
   margin-bottom: 10px;
 }
+/* .column12-productDetail {
+  margin-bottom: 10px;
+} */
 .column22-productDetail {
   margin: 10px;
+  font-weight: bold;
+}
+.prof-detail-text p {
+  margin-top: 25px;
 }
 .prof-txt {
   width: 80%;
   margin: auto;
   margin-top: 10px;
   padding: 5px;
-  border: double rgb(0, 0, 116);
+  border: double rgb(49, 71, 92) 10px;
+  font-weight: normal;
 }
