--- a/public/css/login.css
+++ b/public/css/login.css
@@ -6,6 +6,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   width: 90%;
+  padding: 20px;
 }
 
 .username {
@@ -28,6 +29,5 @@
 
 .password-forgotten {
   text-align: center;
-  margin-bottom: 20px;
-  border: solid 3px red;
+  padding: 30px;
 }
