--- a/views/productCart.html
+++ b/views/productCart.html
@@ -11,6 +11,8 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/theme.css" />
+  <link rel="stylesheet" href="/css/productDetail.css" />
+  <link rel="stylesheet" href="/css/productCart.css" />
   <title>estas en index</title>
 </head>
 
@@ -46,7 +48,189 @@
       </div>
     </div>
   </header>
-  <h1>Bienvenido a cart</h1>
+  <nav class="nav-login">
+    <section class="categories">
+      <div>
+        <p>CATEGORIAS <i class="fas fa-chevron-down"></i></p>
+      </div>
+      <div class="prof-zona">
+        <p>Prof. por Zona <i class="fas fa-hard-hat"></i></p>
+        <!-- ocultar boton en mobile, mostrar en el resto -->
+      </div>
+    </section>
+    <div class="login">
+      <div>
+        <p><i class="fas fa-user"></i> <i class="fas fa-chevron-down"></i></p>
+        <p class="txt-ingresar">Ingresar</p>
+        <!-- ocultar txt en mobile, mostrar en el resto -->
+      </div>
+      <div class="cart">
+        <i class="fas fa-shopping-cart"></i>
+        <i class="fas fa-chevron-down"></i>
+      </div>
+    </div>
+  </nav>
+  <main>
+    <!-- <i class="fas fa-trash-alt"></i> -->
+    <div class="top-flex-mobile">
+      <div class="prof-avatar">
+        <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
+      </div>
+      <div>
+        <div class="title-per-device-productCart">Odontologo:</div>
+        <div class="name-per-device-productCart">"Mario Corona"</div>
+        <!--el nombre cambia segun el profesonial  -->
+      </div>
+      <div class="reserved-date">
+        <p>05/08/21</p>
+        <p>T. Mañana</p>
+      </div>
+      <div class="price-button-preview">
+        <div class="price-preview">
+          <p>$100.00</p>
+        </div>
+        <div class="trash-button">
+          <button type="submit">
+            <i class="fas fa-trash-alt"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="top-flex-mobile">
+      <div class="prof-avatar">
+        <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
+      </div>
+      <div>
+        <div class="title-per-device-productCart">electricista:</div>
+        <div class="name-per-device-productCart">"Pikachu"</div>
+        <!--el nombre cambia segun el profesonial  -->
+      </div>
+      <div class="reserved-date">
+        <p>05/08/21</p>
+        <p>T. Tarde</p>
+      </div>
+      <div class="price-button-preview">
+        <div class="price-preview">
+          <p>$100.00</p>
+        </div>
+        <div class="trash-button">
+          <button type="submit">
+            <i class="fas fa-trash-alt"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="top-flex-mobile">
+      <div class="prof-avatar">
+        <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
+      </div>
+      <div class="description">
+        <div class="title-per-device-productCart">Plomero:</div>
+        <div class="name-per-device-productCart">"123456789 123456789fdsdfsgsgsfg"</div>
+        <!--el nombre cambia segun el profesonial  -->
+      </div>
+      <div class="reserved-date">
+        <p>05/07/21</p>
+        <p>T. tarde</p>
+      </div>
+      <div class="price-button-preview">
+        <div class="price-preview">
+          <p>$100.00</p>
+        </div>
+        <div class="trash-button">
+          <button type="submit">
+            <i class="fas fa-trash-alt"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="top-flex-mobile">
+      <div class="prof-avatar">
+        <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
+      </div>
+      <div>
+        <div class="title-per-device-productCart">Pintor:</div>
+        <div class="name-per-device-productCart">"Leo da Vinci"</div>
+        <!--el nombre cambia segun el profesonial  -->
+      </div>
+      <div class="reserved-date">
+        <p>06/10/21</p>
+        <p>T. Mañana</p>
+      </div>
+      <div class="price-button-preview">
+        <div class="price-preview">
+          <p>$100.00</p>
+        </div>
+        <div class="trash-button">
+          <button type="submit">
+            <i class="fas fa-trash-alt"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+    <!-- 
+      <div class="column22-productDetail">
+        <p class="title-prof-name">Detalles</p>
+        <p>Zona:</p>
+        <div class="details">
+          <div>
+            <p>Edad:</p>
+            <p>Matricula:</p>
+            <p>Trabaja en Equipo:</p>
+          </div>
+          <div>
+            <p>Años de Experiencia:</p>
+            <p>Lleva Herramientas:</p>
+          </div>
+        </div>
+        <div class="prof-detail-text">
+          <p>Razones por cuales elegirme:</p>
+          <p class="prof-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, sit culpa officiis mollitia
+            odit eum tempore dolor. Cum necessitatibus quibusdam praesentium deleniti maxime similique illo qui, et
+            explicabo unde vel.</p>
+        </div>
+      </div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  </main>
+  <footer class="footer">
+    <div>
+      <h4 class="phrase-footer">Servicios para Empresas y Pymes</h4>
+    </div>
+    <section>
+      <div class="titles-footer">
+        <ul class="list-footer">
+          <li><a href="">Terminos y Condiciones</a></li>
+          <li><a href="">Ayuda</a></li>
+          <li>
+            <a href="registerProf">Trabaja con Nosotros</a>
+          </li>
+          <li><a href="">Contacto</a></li>
+        </ul>
+      </div>
+      <div class="Copyright">
+        <p>Copyright © 2021-2021</p>
+        <p>Calle Falsa 123, Springfield</p>
+      </div>
+    </section>
+  </footer>
 </body>
 
 </html>
